# Periphery-Dashboard

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
src/: ble_bas_per.rs  bluetooth.rs  display.rs  eink.rs  main.rs
src/bluetooth/: controller.rs  mod.rs  peripheral.rs  profile.rs
