[package]
name = "periphery_dashboard"
version = "0.1.0"
edition = "2024"
authors = ["Julian Doppler"]
description = "This project aims to provide the firmware for an E-ink dashboard that, in conjunction with a local hub, can display images transmitted on a regular basis."
keywords = ["embassy", "rp2350", "e-ink", "dashboard", "bluetooth"]

[dependencies]
# Cortex-M
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

# Panic Handler
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Embassy
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.9.0", features = [
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
    "defmt",
] }

# Defmt Logging
defmt = "1.0.1"
defmt-rtt = "1.1.0"

# Bluetooth LE
trouble-host = { version = "0.5.1", features = ["peripheral", "security"] }
cyw43-firmware = { version = "0.1.0", features = ["bluetooth", "wifi"] }
cyw43 = { version = "0.6.0", features = ["bluetooth"] }
cyw43-pio = "0.9.0"
static_cell = "2.1.1"

# E-ink
epd-waveshare = "0.6.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"


# required because of cyw43::new_with_bluetooth() and cyw43_task()
[patch.crates-io]
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "729f96b9521d6705c1d664f4e9c636155d440519" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "729f96b9521d6705c1d664f4e9c636155d440519" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "729f96b9521d6705c1d664f4e9c636155d440519" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "729f96b9521d6705c1d664f4e9c636155d440519" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "729f96b9521d6705c1d664f4e9c636155d440519" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "729f96b9521d6705c1d664f4e9c636155d440519" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "729f96b9521d6705c1d664f4e9c636155d440519" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "729f96b9521d6705c1d664f4e9c636155d440519" }
